<resources>
    <string name="app_name">KUNI</string>

    <!--facebook-->
    <!--<string name="facebook_app_id">1398609956898291</string>-->
    <string name="facebook_app_id">486285708400666</string>
    <!--<string name="fb_login_protocol_scheme">fb1398609956898291</string>-->
    <!--<string name="fb_login_protocol_scheme">fb302068633592091</string>-->
    <string name="fb_login_protocol_scheme">fb486285708400666</string>

    <string name="descripcion_service">Network Kuni Service</string>

    <string name="success">SUCCESS</string>
    <string name="cancel">CANCEL</string>
    <string name="error">ERROR</string>

    <!--botones-->
    <string name="btn_entrar">Entrar</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>

    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_ver_codigo">Ver código</string>
    <string name="btn_ok">OK</string>


    <!-- Hints -->
    <string name="contraseña">Contraseña</string>

    <string name="contraseña_actual">Contraseña actual</string>
    <string name="contraseña_nueva">Nueva contraseña</string>
    <string name="contraseña_repetida">Repite tu nueva contraseña</string>

    <string name="correo_electronico">Correo electrónico</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="nombre">Nombre (s)</string>
    <string name="apellidos">Apellido (s)</string>
    <string name="pin_valuador">PIN de valuador</string>
    <string name="empresa">Empresa</string>
    <string name="celular">Teléfono celular</string>
    <string name="contraseña_repetir">Captura nuevamente tu contraseña</string>
    <string name="contraseña_actual_repetir">Captura tu contraseña actual</string>

    <!--labels
    <string name="lbl_series">%1d$/%2d$</string>
    -->
    <string name="lbl_correo">Correo</string>
    <string name="lbl_contraseña">Contraseña</string>
    <string name="lbl_nombre">Nombre(s)</string>
    <string name="lbl_bases">Bases del concurso</string>
    <string name="lbl_privacidad">Aviso de privacidad</string>
    <string name="lbl_recompensas_vacias">No hay premios disponibles</string>
    <string name="lbl_intrucciones">Reglas del juego</string>


    <string name="lbl_apellido">Apellido(s)</string>
    <string name="lbl_contraseña_confirmar">Confirmar contraseña</string>
    <string name="lbl_series_progreso">%1$d/%2$d</string>
    <string name="lbl_titulo_dialogo_contraseña">Te enviamos un correo</string>
    <string name="lbl_dialogo_contraseña">Revisa tu correo electrónico y haz clic en el enlace para restablecer tu contraseña</string>
    <string name="lbl_titulo_dialogo_cuenta">¡Casi estas listo!</string>
    <string name="lbl_dialogo_cuenta">Revisa tu correo electrónico y haz clic en el enlace para confirmar tu cuenta</string>

    <string name="lbl_etiqueta_pregunta">Nivel %1$d/Serie %2$d \nPregunta %3$d</string>

    <string name="lbl_comenzar">Comenzar</string>
    <string name="lbl_condiciones">Al crear tu cuenta aceptas las condiciones de uso y políticas de privacidad</string>
    <string name="lbl_instrucciones_recuperar_password">Para restablecer la contraseña ingresa tu correo electrónico con el que te registraste y te enviaremos un enlace</string>
    <string name="hint_ingresa_correo">Ingresa tu correo</string>

    <string name="lbl_concurso">El concursoRest finaliza el %s</string>
    <string name="lbl_nivel">Nivel %d</string>

    <string name="lbl_premios_disponibles">Hay %d premios disponibles</string>
    <string name="lbl_premios_agotados">Premios agotados</string>
    <string name="lbl_estado_nivel_terminado">¡Terminado!</string>
    <string name="lbl_estado_nivel_actual">Te encuentras aquí</string>
    <string name="lbl_cuenta">Mi cuenta</string>
    <string name="lbl_inicio">Inicio</string>
    <string name="lbl_premios">Premios</string>
    <string name="lbl_legales">Legales</string>
    <string name="lbl_respuesta_correcta">Respuesta correcta:</string>

    <string name="lbl_mis_premios">Mis premios</string>
    <string name="lbl_ajustes">Ajustes</string>
    <string name="lbl_salir">Salir</string>
    <string name="password_repeat">La contraseña no coincide</string>
    <string name="dias_restantes">!Vamos! Aún quedan %s días</string>

    <string name="lbl_patrocinador">Presentate en cualquier sucursal de %s y presenta este código.</string>
    <string name="lbl_vigencia">Vigencia: %s</string>
    <string name="lbl_dialogo">¿Qué esperas? Sigue participando, mientras más juegues más premios podrás ganar.</string>
    <string name="lbl_dialogo_instrucciones">Para canjearlo deberás presentar este código y una identificación oficial.</string>


    <!--algo-->
    <string name="lbl_no_password">¿Olvidaste tu contraseña?</string>
    <string name="lbl_no_account">¿No tienes una cuenta?</string>
    <string name="lbl_yes_account">¿Ya tienes una cuenta?</string>

    <!--Errores-->

    <string name="error_correo">El correo electrónico es obligatorio</string>
    <string name="error_correo_formato">El formato es incorrecto</string>
    <string name="error_contraseña">La contraseña es obligatoria</string>
    <string name="error_contraseña_formato">Debe ser mayor a 8 y menor a 15 caracteres</string>
    <string name="error_contraseña_repetida">La contraseña no coincide</string>
    <string name="error_nombre">El nombre es obligatorio</string>
    <string name="error_apellido_paterno">El apellido es obligatorio</string>
    <string name="error_campo">Campo obligatorio</string>
    <string name="error_inicio_sesion">El usuario y/o contraseña son incorrectos, favor de verificarlo</string>
    <string name="error_no_registrado">El correoUsuario electrónico no está registrado, favor de verificarlo</string>
    <string name="no_conexion">No cuenta con conexión a internet</string>
    <string name="no_conexion_revisa">Revisa tu conexión a internet</string>

    <string name="error_exception">Algo salió mal, inténtelo más tarde</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
