<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_outline_white_24dp"
        android:title="@string/lbl_inicio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_premios"
        android:enabled="true"
        android:icon="@drawable/ic_comparable_list_view_blanco_24dp"
        android:title="@string/lbl_mis_premios"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_perfil"
        android:enabled="true"
        android:icon="@drawable/ic_account_white_24dp"
        android:title="@string/lbl_cuenta"
        app:showAsAction="ifRoom" />
</menu>