<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbar_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/lbl_nombre"
                android:inputType="textPersonName" />
            <!-- Name Label -->


            <EditText
                android:id="@+id/txtxFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/lbl_apellido"
                android:inputType="textCapSentences" />


            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/lbl_correo"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/lbl_contraseña"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/lbl_contraseña_confirmar"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/lblContraseñaRepetida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="start"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:text="@string/password_repeat"
                android:textColor="@color/primary_dark"
                android:textSize="12sp"
                android:visibility="gone" />
            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:text="@string/btn_crear_cuenta"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/lbl_condiciones"
                android:textSize="16sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
