<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/toolbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/lblDatosPersonales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="@string/lbl_cuenta"
                android:textColor="@color/accent_rosa"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/monsoon" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/nombre"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="50"
                android:textColor="@color/monsoon" />

            <!-- Email Label -->

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/apellidos"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="50"
                android:textColor="@color/monsoon" />


            <!-- Password Label -->
            <EditText
                android:id="@+id/txtContraseñaActual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/monsoon" />


        </LinearLayout>

    </ScrollView>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>
