<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbar_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp">
            <TextView
                android:id="@+id/txtInstrucciones"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/lbl_instrucciones_recuperar_password"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fab_label_background"
                android:hint="@string/hint_ingresa_correo"
                android:inputType="textEmailAddress"
                android:maxLength="50" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:text="@string/btn_enviar"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
