<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="80dp">

            <!-- Email Label -->


            <!--<EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fab_label_background"
                android:inputType="textPersonName"
                android:hint="Name" />-->

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="68dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_correo"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"

                    android:textColor="@color/monsoon" />
            </android.support.design.widget.TextInputLayout>-->

            <!-- Password Label -->
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fab_label_background"
                android:ems="10"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="80dp"
                android:hint="@string/lbl_correo"
                android:inputType="textEmailAddress" />

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_contraseña"
                    android:inputType="textPassword"
                    android:maxLength="50"

                    android:textColor="@color/monsoon" />
            </android.support.design.widget.TextInputLayout>-->
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fab_label_background"
                android:ems="10"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/lbl_contraseña"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/btn_entrar"
                android:textColor="@color/white" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/btn_entrar" />

            <TextView
                android:id="@+id/link_forgot"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/lbl_no_password"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="48dp"
                android:gravity="center|bottom"
                android:text="@string/lbl_no_account"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
